# course-optimisation-sample

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  callgrind.out.1750  callgrind.out.8527  cmake_install.cmake  raytracer
Testing/Temporary/: CTestCostData.txt
scenes/: two-triangles-on-plane.json
src/lodepng/: Makefile  cmake_install.cmake
src/rayimage/: Makefile  cmake_install.cmake
src/raymath/: Makefile  Vector3.cpp  cmake_install.cmake
src/rayscene/: Camera.cpp  Makefile  Scene.cpp  cmake_install.cmake
